src/objects/ServiceCharges__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>stored service charges</description>
    <fields>
        <fullName>Banquet_Bar_Service_Charge__c</fullName>
        <description>each item service charge for banquet bar</description>
        <label>Banquet Bar Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Banquet_Beverage_Service_Charge__c</fullName>
        <description>service charge on beverages each item of banquet</description>
        <label>Banquet Beverage Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Banquet_Fitness_Service_Charge__c</fullName>
        <label>Banquet Fitness Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Banquet_Food_Service_Charge__c</fullName>
        <description>food service charge on each banquet item</description>
        <label>Banquet Food Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Banquet_Other_Service_Charge__c</fullName>
        <label>Banquet Other Service Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Guest__c</fullName>
        <description>Service Charge Guest</description>
        <inlineHelpText>Use this service charge to charge non-member events and banquets</inlineHelpText>
        <label>Service Charge Guest</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Charge_Member__c</fullName>
        <description>Member Service Charge %</description>
        <label>Service Charge Member</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Charge_for_food__c</fullName>
        <description>Service Charge for food</description>
        <inlineHelpText>Service Charge for food</inlineHelpText>
        <label>Service Charge for food</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Charge_general__c</fullName>
        <description>Service Charge general</description>
        <inlineHelpText>Service Charge general</inlineHelpText>
        <label>Service Charge general</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>ServiceCharges</label>
</CustomObject>